Add "Adam" level of difficulty (4x4 grid)
Adam requested a version which increased the difficulty.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
       <span id="message"></span>
       <button class="mode">Easy</button>
       <button class="mode selected">Hard</button>
+      <button class="mode">Adam</button>
     </div>
     <div id="container">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
       <div class="square"></div>
       <div class="square"></div>
       <div class="square"></div>
