--- a/index.html
+++ b/index.html
@@ -3,19 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Color Game</title>
-    <link rel="stylesheet" href="colorgame.css" media="screen" title="no title" charset="utf-8">
+    <!-- Libraries -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="colorgame.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <!-- <div id="header" class="text-center"> -->
-      <h1>The great <br><span id="colorDisplay">RGB</span><br> guessing game</h1>
+      <h1>The great <br><span id="colorToGuess">RGB</span><br> guessing game</h1>
     <!-- </div> -->
     <div id="stripe">
-      <button id="reset">New Colors</button>
+      <!-- <button id="reset">New Colors</button> -->
+        <button id="reset" type="button" class="btn">New Colors</span>
+        </button>
       <span id="message"></span>
-      <button class="mode">Easy</button>
-      <button class="mode selected">Hard</button>
-      <button class="mode">Adam</button>
+      <!-- mode dropdown -->
+      <div class="btn-group">
+        <button type="button" class="btn mode dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mode <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#" class="modeButton">Easy</a></li>
+          <li><a href="#" class="modeButton">Hard</a></li>
+          <li><a href="#" class="modeButton">Adam</a></li>
+        </ul>
+      </div>
+      <!-- range dropdown -->
+      <div class="btn-group">
+        <button type="button" class="btn range dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Color Range <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#" class="rangeButton">Full</a></li>
+          <!-- <li><a href="#" class="range">Medium</a></li> -->
+          <!-- <li><a href="#" class="range">Close</a></li> -->
+          <li><a href="#" class="rangeButton">David</a></li>
+        </ul>
+      </div>
     </div>
     <div id="container">
       <div class="square"></div>
@@ -36,7 +60,6 @@
       <div class="square"></div>
     </div>
 
-    <!-- <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="colorgame.js"></script>
   </body>
 </html>
