--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
       </div>
     </div>
     <div id="container">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
+      <div class="colorGuess"></div>
     </div>
 
     <script type="text/javascript" src="colorgame.js"></script>
