Remove bootstrap drop-downs and show custom ones
The stripe bar as originally coded did not work correctly on CodePen.  Bootstrap
could be removed after a few more tweaks.

Fixes #2

--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
     <!-- </div> -->
     <div id="stripe">
       <!-- <button id="reset">New Colors</button> -->
-        <button id="reset" type="button" class="btn">New Colors</span>
+      <div class="dropdown">
+        <button id="reset">New Colors</span>
         </button>
+      </div>
       <span id="message"></span>
       <!-- mode dropdown -->
-      <div class="btn-group">
-        <button type="button" class="btn mode dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mode <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#" class="modeButton">Easy</a></li>
-          <li><a href="#" class="modeButton">Hard</a></li>
-          <li><a href="#" class="modeButton">Adam</a></li>
-        </ul>
+      <div class="dropdown">
+        <button class="dropbtn mode">Mode <span class="caret"></span></button>
+        <div class="dropdown-content">
+          <a href="#" class="modeButton">Easy</a>
+          <a href="#" class="modeButton">Hard</a>
+          <a href="#" class="modeButton">Adam</a>
+        </div>
       </div>
       <!-- range dropdown -->
-      <div class="btn-group">
-        <button type="button" class="btn range dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Color Range <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#" class="rangeButton">Full</a></li>
-          <!-- <li><a href="#" class="range">Medium</a></li> -->
-          <!-- <li><a href="#" class="range">Close</a></li> -->
-          <li><a href="#" class="rangeButton">David</a></li>
-        </ul>
+      <div class="dropdown">
+        <button class="dropbtn range">Color Range <span class="caret"></span></button>
+        <div class="dropdown-content">
+          <a href="#" class="rangeButton">Full</a>
+          <!-- <a href="#" class="range">Medium</a> -->
+          <!-- <a href="#" class="range">Close</a> -->
+          <a href="#" class="rangeButton">David</a>
+      </div
       </div>
     </div>
     <div id="container">
