Remove remaining bootstrap code
Use normalize.css instead.

Fixes #5

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Color Game</title>
     <!-- Libraries -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="colorgame.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
@@ -23,7 +22,7 @@
       <span id="message"></span>
       <!-- mode dropdown -->
       <div class="dropdown">
-        <button class="dropbtn mode">Mode <span class="caret"></span></button>
+        <button class="dropbtn mode">Mode <div class="arrow-down"></div></button>
         <div class="dropdown-content">
           <a href="#" class="modeButton">Easy</a>
           <a href="#" class="modeButton">Hard</a>
@@ -32,7 +31,7 @@
       </div>
       <!-- range dropdown -->
       <div class="dropdown">
-        <button class="dropbtn range">Color Range <span class="caret"></span></button>
+        <button class="dropbtn range">Color Range <div class="arrow-down"></div></button>
         <div class="dropdown-content">
           <a href="#" class="rangeButton">Full</a>
           <!-- <a href="#" class="range">Medium</a> -->
