Fix link CSS color and spacing

--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
             <div class="text-center">
                 Guess the color - Created by
                 <a href="https://github.com/Lilyheart/guess-the-rgb">
-                    Lily Romano
-                </a>
-                . Started as part of
+                    Lily Romano</a>. Started as part of
                 <a href="https://www.udemy.com/the-web-developer-bootcamp/" target="_blank">
-                    Colt Steele's Web Developer Bootcamp
-                </a>
+                    Colt Steele's Web Developer Bootcamp</a>
                 but continued on.
             </div>
         </header>
