Add instructions on how to play the game
Some users were confused as to what to do.  Added the instructions to an
information icon in the title.  When the icon is hovered over, a short message
appears with instructions on how to play the game.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
         <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="colorgame.css" media="screen" title="no title" charset="utf-8">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     </head>
     <body>
         <header id="header" class="header">
@@ -24,6 +25,11 @@
             The great<br>
             <span id="colorToGuess" class="colorToGuess">RGB</span><br>
             guessing game
+            <i class="dropdown fa fa-info-circle" aria-hidden="true">
+                <span class="dropdown-content">
+                    <p>Select the color that you think matches the RGB value listed in the title above</p>
+                </span>
+            </i>
         </h1>
         <!-- </div> -->
         <div id="stripe" class="stripe">
