Add new options to change color model (HSL/HEX)
@SimplyPhy requested an HSL version to expand upon the existing RGB version.
HSL as well as hexadecimal was added as new options.

Fixes #7

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                     <a href="#" class="rangeButton">David</a>
                 </div </div>
             </div>
+            <!-- range dropdown -->
+            <div class="dropdown">
+                <button class="dropbtn model">Color Model
+                    <div class="arrow-down"></div>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#" class="modelButton">RGB</a>
+                    <a href="#" class="modelButton">Phy (HSL)</a>
+                    <!-- <a href="#" class="range">Medium</a> -->
+                    <!-- <a href="#" class="range">Close</a> -->
+                    <a href="#" class="modelButton">HEX</a>
+                </div </div>
+            </div>
         </div>
         <div id="container" class="container">
             <div class="colorGuess"></div>
